6) Refactoring
-> CONCLUDED:
Test/application.yml comments
TransactionsClassicExcProjectEmpty
Move global exceptions to CORE folder
Change from Java 11 to JAva 17

-> WORKING:
Implant Class PanelClass in TestUtils

-> NEXT STEPS:
Cacheable
Modular Monolith
Jenkins Pipeline + Reverse Proxy

-> FUTURE IMPLEMENTATIONS:
Internationalization
Exceptions - identify (Http 500, 400, 200)
Upload: Pictures + Files
GPS
Push notifications
OAuth2/JWT authentication
Multiples DB's
Multi-Tenancy