@@ -216,23 +216,12 @@
                 ║    https://github.com/reactor/BlockHound/issues/33                     ║
                 ║    OpenJDK 13 requires -XX:+AllowRedefinitionToAddDeleteMethods flag   ║
                 ╚════════════════════════════════════════════════════════════════════════╝-->
-            <!--            <plugin>-->
-            <!--                <groupId>org.apache.maven.plugins</groupId>-->
-            <!--                <artifactId>maven-surefire-plugin</artifactId>-->
-            <!--                <version>2.22.2</version>-->
-            <!--                <configuration>-->
-            <!--                    <argLine>-XX:+AllowRedefinitionToAddDeleteMethods</argLine>-->
-            <!--                </configuration>-->
-            <!--            </plugin>-->
-
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.0</version>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
                 <configuration>
-                    <release>11</release> <!-- <release>13/14/15</release> -->
-                    <compilerArgs>--enable-preview</compilerArgs>
-                    <compilerArgs>-Xlint:all</compilerArgs>
+                    <argLine>-XX:+AllowRedefinitionToAddDeleteMethods</argLine>
                 </configuration>
             </plugin>
         </plugins>
